[package]
name = "rustic_rtmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["full"] }
byteorder = "1.4.3"
bytesio = "0.2.0"
indexmap = "2.0.0"
failure = "0.1.8"
bytes = "1.4.0"
log = "0.4.19"
flexi_logger = "0.25.6"
openh264 = "0.4.2"
